[package]
authors = ["Ruin0x11 <ipickering2@gmail.com>"]
name = "oxidoc"
version = "0.1.2"

[[bin]]
doc = false
name = "oxidoc"
path = "src/main.rs"

[[test]]
name = "tests"

[dependencies]
ansi_term = "*"
bincode = "*"
clap = "*"
env_logger = "*"
error-chain = "*"
lazy_static = "*"
log = "*"
regex = "*"
serde = "*"
serde_derive = "*"
strsim = "*"
syntex_syntax = "*"
term_size = "*"
toml = "*"

[dependencies.catmark]
git = "https://github.com/ayourtch/catmark"

[dependencies.cursive]
default-features = false
features = ["pancurses-backend"]
version = "0.6"

[lib]
name = "oxidoc"
path = "src/lib.rs"

[target."cfg(unix)".dependencies]
pager = "0.13.0"
